Add step1 + step2 design

--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,6 +1,7 @@
 <%= render 'layouts/navigation'%>
 <h2>We will help you easily customize a brochure</h2>
 <h3>Response:</h3>
+<%= link_to 'step1', wizard_path(:step1) %>
 <table class="table table-striped">
   <thead>
   </thead>
