--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -21,8 +21,13 @@
           <li>Easy To Print</li>
         </ul>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <%= link_to "Download Sample'", download_path, class:'btn btn-primary', target: "_blank"%>
+        <%= link_to "Download Sample", download_path, class:'btn btn-primary', target: "_blank"%>
       </div>
+    </div>
+  </div>
+  <div class="row no-gutters text-left">
+    <div class="col-4 mt-4">
+      <%= link_to 'Next Step', wizard_path(:step2), class:'btn btn-primary' %>
     </div>
   </div>
 </div>
