--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="row no-gutters mt-5">
     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="..." alt="Card image cap">
+      <img class="card-img-top" src="<%= asset_path('pdf_sample.png') %>" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">4-Page Brochure</h5>
         <ul>
@@ -20,7 +20,6 @@
           <li>Property Images</li>
           <li>Easy To Print</li>
         </ul>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <%= link_to "Download Sample", download_path, class:'btn btn-primary', target: "_blank"%>
       </div>
     </div>
