Fix main page design

--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -1,10 +1,5 @@
+<%= render 'layouts/navigation'%>
 <div class="container mt-5">
-  <div class="row no-gutters">
-    <div class="col-12">
-      <h1>Cotala Brochure</h1>
-      <p>We will help you customize your brochure</p>
-    </div>
-  </div>
   <div class="row no-gutters text-left mt-5">
     <div class="col-12">
       <%= render '/layouts/steps'%>
