--- a/app/views/tours/step2.html.erb
+++ b/app/views/tours/step2.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/navigation'%>
 <div class="container mt-5">
   <div class="row no-gutters text-left mt-5">
     <div class="col-12 ">
