--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,2 +1,10 @@
 <%= render 'layouts/navigation'%>
-<%= link_to 'step1', wizard_path(:step1)%>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-12">
+      <h1>Cotala Brochure</h1>
+      <p>We will help you customize your brochure</p>
+      <%= link_to 'Start', wizard_path(:step1), class: 'btn btn-primary'%>
+    </div>
+  </div>
+</div>
