--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="row no-gutters text-left">
     <div class="col-4 mt-4">
-      <%= link_to 'Next Step', wizard_path(:step2), class:'btn btn-primary' %>
+      <%= link_to 'Next Step', wizard_path(:step2, :tour_id => @tour.id), class:'btn btn-primary' %>
     </div>
   </div>
 </div>
