pass tour id to steps

--- a/app/views/tours/step2.html.erb
+++ b/app/views/tours/step2.html.erb
@@ -2,12 +2,16 @@
 <div class="container mt-5">
   <div class="row no-gutters text-left mt-5">
     <div class="col-12 ">
-      <%= render '/layouts/steps'%>
+      <%= render '/layouts/steps', tour: @tour %>
       <h2 class="mt-3"> Pick 15 Photos</h2>
     </div>
   </div>
   <div class="row no-gutters mt-5">
-
+    <% @images.each do |image| %>
+      <div class="col-2 my-2">
+        <%= image_tag "https://www.cotala.com/tours/#{@tour_id}/#{@tour_id}_#{image}", class:'w-100'%>
+      </div>
+    <% end %>
   </div>
   <div class="row no-gutters text-left">
     <div class="col-4 mt-4">
