--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -2,7 +2,7 @@
 <div class="container mt-5">
   <div class="row no-gutters text-left mt-5">
     <div class="col-12">
-      <%= render '/layouts/steps'%>
+      <%= render '/layouts/steps', tour: @tour%>
     </div>
   </div>
   <div class="row no-gutters mt-5">
