--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -6,6 +6,7 @@
     </div>
   </div>
   <div class="row no-gutters mt-5">
+  <div class="col-12">
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="<%= asset_path('pdf_sample.png') %>" alt="Card image cap">
       <div class="card-body">
@@ -19,9 +20,27 @@
       </div>
     </div>
   </div>
-  <div class="row no-gutters text-left">
+  <div class="row no-gutters text-left mb-3">
     <div class="col-4 mt-4">
       <%= link_to 'Next Step', wizard_path(:step2, :tour_id => @tour.id), class:'btn btn-primary' %>
     </div>
+  </div>
+  <div class="col-12">
+    <table class="table table-dark">
+      <thead>
+        <tr>
+          <% Tour.column_names.each do |column | %>
+          <th><%= column %></th>
+          <% end %>
+        </tr>
+      </thead>
+      <tbody>
+      <tr>
+          <% Tour.column_names.each do |column | %>
+          <td><%= @tour[column] %></td>
+          <% end %></tr>
+      </tbody>
+    </table>
+  </div>
   </div>
 </div>
