--- a/app/views/tours/step2.html.erb
+++ b/app/views/tours/step2.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="row no-gutters mt-5">
-    <% @images.each do |image| %>
+    <% @tour.images.each do |image| %>
       <div class="col-2 my-2">
         <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{image.name}", class:'w-100'%>
       </div>
