--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -1,2 +1,3 @@
 <%= render 'layouts/navigation'%>
 <%= render '/layouts/steps', tour: @tour%>
+<%= link_to "Create PDF", create_path, class:'btn btn-primary'%>
