--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,53 @@
  *
  */
 @import "bootstrap";
+$primary: #981c1e;
+$white: #fff;
+$secondary: #000000;
+body {
+  font-family: "Raleway,sans-serif";
+}
+.btn {
+  padding: 7px 14px;
+  &.step {
+    padding: 10px 25px;
+    border-radius: 0px;
+  }
+}
+.btn-primary {
+  background-color: $primary;
+  border-color: $primary;
+  color: $white;
+  &:hover {
+    background-color: $primary;
+    border-color: $primary;
+  }
+  &.border {
+    border-radius: 10px;
+  }
+}
+.btn-secondary {
+  background-color: $secondary;
+  border-color: $secondary;
+  color: $white;
+}
+.navbar {
+  padding: 0px 410px;
+  background-color: $white;
+  height: 75px;
+  border-bottom: 1px solid black;
+}
+.section {
+  padding: 60px 0px 0px 410px;
+}
+.pdf-button {
+  padding: 10px 150px;
+}
+.section-banner {
+  padding: 180px 0px 0px 410px;
+  background-image: url("ofs-2021-3.jpeg");
+  background-repeat: no-repeat;
+  height: 1000px;
+  background-position: center;
+  background-size: cover;
+}
