--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <h1>Cotala Borchure</h1>
+<nav class="navbar">
+  <a class="navbar-brand" href="#">
+    <%= image_tag "cotala-logo-black-v2.png", width: '163.5px', height: '44px' %>
+  </a>
 </nav>
