--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,10 +1,12 @@
 <%= render 'layouts/navigation'%>
-<div class="container">
-  <div class="row no-gutters">
-    <div class="col-12">
-      <h1>Cotala Brochure</h1>
-      <p>We will help you customize your brochure</p>
-      <%= link_to 'Start', wizard_path(:step1, :tour_id => @tour.id), class: 'btn btn-primary'%>
+<section class="section section-banner">
+  <div class="container p-0 m-0">
+    <div class="row no-gutters">
+      <div class="col-12">
+        <h1>Cotala Brochure</h1>
+        <p>We will help you customize your brochure</p>
+        <%= link_to 'Start', wizard_path(:step1, :tour_id => @tour.id), class: 'btn btn-primary'%>
+      </div>
     </div>
   </div>
-</div>
+</section>
