--- a/app/views/tours/step2.html.erb
+++ b/app/views/tours/step2.html.erb
@@ -1,26 +1,28 @@
 <%= render 'layouts/navigation'%>
-<div class="container mt-5">
-  <div class="row no-gutters text-left mt-5">
-    <div class="col-12 ">
-      <%= render '/layouts/steps', tour: @tour %>
-      <h2 class="mt-3"> Pick 15 Photos</h2>
-    </div>
-  </div>
-  <div class="row no-gutters mt-5">
-    <% @tour.images.each do |image| %>
-      <div class="col-2 my-2">
-        <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{image.name}", class:'w-100'%>
+<section class="section">
+  <div class="container m-0 p-0">
+    <div class="row no-gutters text-left">
+      <div class="col-12 ">
+        <%= render '/layouts/steps', tour: @tour %>
+        <h2 class="mt-3"> Pick 15 Photos</h2>
       </div>
-    <% end %>
+    </div>
+    <div class="row no-gutters mt-5">
+      <% @tour.images.each do |image| %>
+        <div class="col-2 my-2">
+          <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{image.name}", class:'w-100'%>
+        </div>
+      <% end %>
+    </div>
+    <div class="row no-gutters text-left">
+      <div class="col-4 mt-4">
+        <%= link_to 'Next Step', wizard_path(:step3, :tour_id => @tour.id), class:'btn btn-primary' %><br/>
+        <strong>You can always edit the images</strong>
+      </div>
+      <div class="col-4 mt-4">
+      </div>
+      <div class="col-4 mt-4">
+      </div>
+    </div>
   </div>
-  <div class="row no-gutters text-left">
-    <div class="col-4 mt-4">
-      <%= link_to 'Next Step', wizard_path(:step3, :tour_id => @tour.id), class:'btn btn-primary' %><br/>
-      <strong>You can always edit the images</strong>
-    </div>
-    <div class="col-4 mt-4">
-    </div>
-    <div class="col-4 mt-4">
-    </div>
-  </div>
-</div>
+</section>
