--- a/app/views/tours/step2.html.erb
+++ b/app/views/tours/step2.html.erb
@@ -4,14 +4,15 @@
     <div class="row no-gutters">
       <div class="col-12">
         <%= render '/layouts/steps', tour: @tour%>
+        <h1 class="mt-3">Selecte theme </h1>
       </div>
       <%= form_for @tour, url: wizard_path(:step3, :tour_id => @tour.id), method: :put do |f| %>
         <%=  f.hidden_field :selected_theme  %>
         <div class="row no-gutters">
           <div class="col-2">
           </div>
-          <div class="col-4 mt-5 ">
-            <div class="card selected-theme theme-column dark" style="width: 100%;">
+          <div class="col-4 mt-3 ">
+            <div class="card <%= 'selected-theme' if @tour.selected_theme == 'dark' %> theme-column dark" style="width: 100%;">
               <img class="card-img-top" src="<%= asset_path('pdf_sample.png') %>" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Dark Theme</h5>
@@ -23,8 +24,8 @@
               </div>
             </div>
           </div>
-          <div class="col-4 mt-5 ">
-            <div class="card theme-column white" style="width: 100%;">
+          <div class="col-4 mt-3">
+            <div class="card theme-column white <%= 'selected-theme' if @tour.selected_theme == 'white' %>" style="width: 100%;">
               <img class="card-img-top" src="<%= asset_path('pdf_sample.png') %>" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Light Theme</h5>
@@ -38,10 +39,12 @@
           </div>
           <div class="col-2">
           </div>
-        </div>
-      <div class="col-12 text-left mt-3">
-        <%= f.submit 'Next Step', class:'btn btn-primary theme-step-button' %>
+      <div class="col-3"></div>
+      <div class="col-6 text-center mt-5">
+        <%= f.submit 'Next Step', class:'btn btn-primary theme-step-button w-100' %>
       </div>
+      <div class="col-3"></div>
+        </div>
       <% end %>
     </div>
   </div>
